[gd_scene load_steps=5 format=3 uid="uid://credits001"]

[ext_resource type="Script" uid="uid://hv8053rknrms" path="res://scripts/ui/credits_scene.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://d3nituw3cuk5g" path="res://assets/ChibiBG.png" id="2_bg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.08, 0.05, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.45, 0.85, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn"]
bg_color = Color(0.12, 0.08, 0.2, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.45, 0.85, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[node name="CreditsScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bg")
expand_mode = 1
stretch_mode = 6

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="SafeArea" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 40

[node name="MainVBox" type="VBoxContainer" parent="SafeArea"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="SafeArea/MainVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.5, 1)
theme_override_font_sizes/font_size = 36
text = "CREDITS"
horizontal_alignment = 1

[node name="CreditsPanel" type="PanelContainer" parent="SafeArea/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="CreditsMargin" type="MarginContainer" parent="SafeArea/MainVBox/CreditsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="CreditsScroll" type="ScrollContainer" parent="SafeArea/MainVBox/CreditsPanel/CreditsMargin"]
layout_mode = 2
size_flags_vertical = 3

[node name="CreditsContent" type="VBoxContainer" parent="SafeArea/MainVBox/CreditsPanel/CreditsMargin/CreditsScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 25

[node name="ArtSection" type="VBoxContainer" parent="SafeArea/MainVBox/CreditsPanel/CreditsMargin/CreditsScroll/CreditsContent"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ArtTitle" type="Label" parent="SafeArea/MainVBox/CreditsPanel/CreditsMargin/CreditsScroll/CreditsContent/ArtSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.7, 1, 1)
theme_override_font_sizes/font_size = 20
text = "ART & IMAGES"
horizontal_alignment = 1

[node name="ArtCredit" type="Label" parent="SafeArea/MainVBox/CreditsPanel/CreditsMargin/CreditsScroll/CreditsContent/ArtSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.95, 1)
theme_override_font_sizes/font_size = 16
text = "vethre (AI-generated)"
horizontal_alignment = 1

[node name="MusicSection" type="VBoxContainer" parent="SafeArea/MainVBox/CreditsPanel/CreditsMargin/CreditsScroll/CreditsContent"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="MusicTitle" type="Label" parent="SafeArea/MainVBox/CreditsPanel/CreditsMargin/CreditsScroll/CreditsContent/MusicSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.9, 1, 1)
theme_override_font_sizes/font_size = 20
text = "MUSIC"
horizontal_alignment = 1

[node name="MusicCredit" type="Label" parent="SafeArea/MainVBox/CreditsPanel/CreditsMargin/CreditsScroll/CreditsContent/MusicSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.95, 1)
theme_override_font_sizes/font_size = 16
text = "Background (Ambient Jazz) - adiiswanto (AI-generated)
Shop (Smooth Jazz) - NotAIGenerated
Boss Music (Suspence) - DELOSound"
horizontal_alignment = 1

[node name="SFXSection" type="VBoxContainer" parent="SafeArea/MainVBox/CreditsPanel/CreditsMargin/CreditsScroll/CreditsContent"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SFXTitle" type="Label" parent="SafeArea/MainVBox/CreditsPanel/CreditsMargin/CreditsScroll/CreditsContent/SFXSection"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = "SOUND EFFECTS"
horizontal_alignment = 1

[node name="SFXCredit1" type="Label" parent="SafeArea/MainVBox/CreditsPanel/CreditsMargin/CreditsScroll/CreditsContent/SFXSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.95, 1)
theme_override_font_sizes/font_size = 16
text = "Pickup Card - floraphonic"
horizontal_alignment = 1

[node name="SFXCredit2" type="Label" parent="SafeArea/MainVBox/CreditsPanel/CreditsMargin/CreditsScroll/CreditsContent/SFXSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.95, 1)
theme_override_font_sizes/font_size = 16
text = "Punch, Block - freesound_community"
horizontal_alignment = 1

[node name="SFXCredit3" type="Label" parent="SafeArea/MainVBox/CreditsPanel/CreditsMargin/CreditsScroll/CreditsContent/SFXSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.95, 1)
theme_override_font_sizes/font_size = 16
text = "Purchase - CrunchpixStudio (freesound)"
horizontal_alignment = 1

[node name="SFXCredit4" type="Label" parent="SafeArea/MainVBox/CreditsPanel/CreditsMargin/CreditsScroll/CreditsContent/SFXSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.95, 1)
theme_override_font_sizes/font_size = 16
text = "Packs Opening - juniorsoundays"
horizontal_alignment = 1

[node name="FontSection" type="VBoxContainer" parent="SafeArea/MainVBox/CreditsPanel/CreditsMargin/CreditsScroll/CreditsContent"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="FontTitle" type="Label" parent="SafeArea/MainVBox/CreditsPanel/CreditsMargin/CreditsScroll/CreditsContent/FontSection"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.6, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "FONT"
horizontal_alignment = 1

[node name="FontCredit" type="Label" parent="SafeArea/MainVBox/CreditsPanel/CreditsMargin/CreditsScroll/CreditsContent/FontSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.95, 1)
theme_override_font_sizes/font_size = 16
text = "Comfortaa - Johan Aakerlund (OFL License)"
horizontal_alignment = 1

[node name="ToolsSection" type="VBoxContainer" parent="SafeArea/MainVBox/CreditsPanel/CreditsMargin/CreditsScroll/CreditsContent"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ToolsTitle" type="Label" parent="SafeArea/MainVBox/CreditsPanel/CreditsMargin/CreditsScroll/CreditsContent/ToolsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.7, 1)
theme_override_font_sizes/font_size = 20
text = "MADE WITH"
horizontal_alignment = 1

[node name="ToolsCredit" type="Label" parent="SafeArea/MainVBox/CreditsPanel/CreditsMargin/CreditsScroll/CreditsContent/ToolsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.95, 1)
theme_override_font_sizes/font_size = 16
text = "Godot Engine 4.5"
horizontal_alignment = 1

[node name="WebsiteSection" type="VBoxContainer" parent="SafeArea/MainVBox/CreditsPanel/CreditsMargin/CreditsScroll/CreditsContent"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="WebsiteTitle" type="Label" parent="SafeArea/MainVBox/CreditsPanel/CreditsMargin/CreditsScroll/CreditsContent/WebsiteSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.8, 1, 1)
theme_override_font_sizes/font_size = 20
text = "WEBSITE"
horizontal_alignment = 1

[node name="WebsiteLink" type="Label" parent="SafeArea/MainVBox/CreditsPanel/CreditsMargin/CreditsScroll/CreditsContent/WebsiteSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.9, 1, 1)
theme_override_font_sizes/font_size = 18
text = "roguechibiki.space"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="SafeArea/MainVBox"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.85, 0.8, 0.95, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
text = "BACK"
